Name:                dagd
Version:             0.1
Synopsis:            URL shortener + tools
License:             Apache-2.0
Author:              Ricky Elrod
Maintainer:          ricky@elrod.me
Copyright:           (c) 2014 Ricky Elrod
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable dagd
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4     && < 5,
    bytestring                >= 0.9.1   && < 0.11,
    case-insensitive          >= 1.1     && < 2,
    heist                     >= 0.13    && < 1,
    http-conduit              >= 2       && < 3,
    imagemagick               >= 0.0.3.3 && < 1,
    lens                      >= 3.7.6   && < 4.2,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    network                   >= 2.4     && < 3,
    pcre-light                >= 0.4     && < 1,
    persistent                >= 1.2     && < 1.4,
    persistent-postgresql     >= 1.2     && < 1.4,
    persistent-template       >= 1.2     && < 1.4,
    random                    >= 1.0.1.1 && < 2,
    resource-pool-catchio     >= 0.2.1.0 && < 1,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    snaplet-persistent        >= 0.3     && < 0.4,
    --snaplet-postgresql-simple >= 0.5     && < 1,
    text                      >= 0.11    && < 1.2,
    time                      >= 1.1     && < 1.5,
    transformers,
    whois                     >= 1.1.1   && < 2,
    xmlhtml                   >= 0.1

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
